crates/pandalang/src/snapshots/pandalang__eval__tests__evals@parens__parens2.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/parens/parens2.panda
---
Ok(
    Int(
        Int {
            n: 9,
        },
    ),
)
