crates/pandalang/src/snapshots/pandalang__eval__tests__evals@parens__parens3.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/parens/parens3.panda
---
Ok(
    Int(
        Int {
            n: 15,
        },
    ),
)
