crates/pandalang/src/snapshots/pandalang__eval__tests__evals@parens__parens4.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/parens/parens4.panda
---
34
