crates/pandalang/src/snapshots/pandalang__eval__tests__evals@parens__parens5.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/parens/parens5.panda
---
Int(
    Int {
        n: 0,
    },
)
